<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_margin="10dp"
                android:background="@drawable/rounded_rectangle">

    <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressBar"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

    <TextView
            android:text="@string/almost_done"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="52dp"
            android:id="@+id/statusOfProcessing"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:fontFamily="cursive"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:gravity="fill_vertical|center_horizontal"
            android:textColor="@android:color/black"/>

    <ImageView
            android:src="@drawable/deer"
            android:id="@+id/imgDeer"
            android:layout_width="330dp"
            android:layout_height="250dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:visibility="invisible"
            android:contentDescription="@string/deer"/>

    <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/returnBtn"
            android:background="@drawable/round_button"
            android:layout_marginBottom="15dp"
            android:layout_alignParentBottom="true"
            android:layout_alignRight="@+id/statusOfProcessing"
            android:layout_alignEnd="@+id/statusOfProcessing"
            android:layout_marginRight="12dp"
            android:layout_marginEnd="12dp"
            android:onClick="onClickReturn"
            android:visibility="invisible"/>

    <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/return_btn"
            android:id="@+id/imgReturnArrow"
            android:layout_alignTop="@+id/returnBtn"
            android:layout_alignLeft="@+id/returnBtn"
            android:layout_alignStart="@+id/returnBtn"
            android:layout_marginTop="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:clickable="true"
            android:onClick="onClickReturn"
            android:visibility="invisible"
            android:contentDescription="@string/return_to_start"/>
</RelativeLayout>